--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
 
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+//                argume/nts += ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
 
@@ -56,6 +56,10 @@ android {
     }
 }
 
+ksp {
+    arg("room.generateKotlin", "true")
+}
+
 dependencies {
 
     implementation libs.androidx.core.ktx
@@ -76,10 +80,7 @@ dependencies {
     implementation(libs.androidx.core.ktx)
     implementation(libs.androidx.room.runtime)
     ksp(libs.androidx.room.compiler)
-//    implementation(libs.hilt.android)
-//    ksp(libs.hilt.compiler)
     implementation(libs.androidx.room.ktx)
-//    implementation libs.androidx.lifecycle
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
