--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         <activity
             android:name=".HomePageActivity"
             android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".LoginPage"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
