--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,17 @@
         <activity
             android:name=".HomePageActivity"
             android:exported="true">
-        </activity>
-
-        <activity
-            android:name=".LoginPage"
-            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".LoginPage"
+            android:exported="false">
+
         </activity>
 
         <activity
@@ -36,7 +37,9 @@
             android:exported="false"  />
         <activity
             android:name=".BuildingFormActivity"
-            android:exported="false"  />
+            android:exported="false"  >
+
+        </activity>
         <activity
             android:name=".BuildingProfileActivity"
             android:exported="false"  />
@@ -53,14 +56,8 @@
             android:name=".EarningsActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
-            android:exported="false">
-
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="false"
-            android:label="@string/app_name" />
+            android:name=".GuestActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
