--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,10 +78,15 @@ dependencies {
     implementation libs.androidx.lifecycle.viewmodel.ktx
     implementation libs.androidx.activity
     implementation(libs.androidx.core.ktx)
+    implementation(libs.androidx.navigation)
+    implementation(libs.foundation)
     implementation(libs.androidx.room.runtime)
+    implementation(libs.gson)
+    implementation libs.androidx.navigation.fragment.ktx
+    implementation libs.androidx.navigation.ui.ktx
     ksp(libs.androidx.room.compiler)
     implementation(libs.androidx.room.ktx)
-//    implementation(libs.date.picker)
+    implementation(libs.date.picker)
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
