--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,21 @@ dependencies {
     implementation(libs.androidx.room.ktx)
     implementation(libs.date.picker)
     testImplementation libs.junit
+    // Mockito for mocking dependencies
+    testImplementation(libs.mockito.core)
+
+    // Coroutines test dependencies
+    testImplementation(libs.org.jetbrains.kotlinx)
+
+    // Truth assertion library
+    testImplementation(libs.com.google.truth)
+
+    // AndroidX test dependencies (for ViewModel testing)
+    testImplementation(libs.androidx.arch.core)
+    testImplementation(libs.androidx.test)
+
+    // Room testing dependencies
+    testImplementation(libs.androidx.room)
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
     androidTestImplementation platform(libs.androidx.compose.bom)
