Sign up - Owners Profile - Financial improvement

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     ksp(libs.androidx.room.compiler)
     implementation(libs.androidx.room.ktx)
     implementation(libs.date.picker)
+//    implementation (libs.firebase)
     testImplementation libs.junit
     // Mockito for mocking dependencies
     testImplementation(libs.mockito.core)
