--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     implementation(libs.gson)
     implementation(libs.androidx.material.icons)
     implementation(libs.upload.care)
+    implementation(libs.coil)
     implementation libs.androidx.navigation.fragment.ktx
     implementation libs.androidx.navigation.ui.ktx
     ksp(libs.androidx.room.compiler)
