Improve FundTab in BuildingProfileActivity for Operational and Capital fund and invoicing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,11 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.6.1" // or a version compatible with your Compose version
+    }
+
     buildFeatures {
         compose true
         viewBinding true
