--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,12 @@
             android:exported="false"
         >
 
+       </activity>
+
+        <activity
+            android:name=".CostDetailActivity"
+            android:exported="false"
+            >
         </activity>
         <activity
             android:name=".ImportOrManualActivity"
