--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,11 @@
             >
         </activity>
         <activity
+            android:name=".DashboardActivity"
+            android:exported="false"
+            >
+        </activity>
+        <activity
             android:name=".ImportOrManualActivity"
             android:exported="false">
 
