--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,9 @@ dependencies {
     implementation(libs.date.picker)
     //implementation(libs.chart)
     implementation(libs.mpandroidchart)
+    implementation(libs.accompanist.pager)
+    implementation(libs.accompanist.pager.indicators)
+    implementation(libs.mpandroidchart)
 //    implementation(libs.apache.poi)
 //    implementation(libs.apache.poi.ooxml)
 //    implementation (libs.firebase)
