--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,11 @@
             >
         </activity>
         <activity
+            android:name=".EarningDetailActivity"
+            android:exported="false"
+            >
+        </activity>
+        <activity
             android:name=".DashboardActivity"
             android:exported="false"
             >
