--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,13 @@
        </activity>
 
         <activity
+            android:name=".CapitalActivity"
+            android:exported="false"
+            >
+
+        </activity>
+
+        <activity
             android:name=".CostDetailActivity"
             android:exported="false"
             >
