--- a/build.gradle
+++ b/build.gradle
@@ -5,4 +5,9 @@ alias(libs.plugins.android.application) apply false
     alias(libs.plugins.kotlin.compose) apply false
     alias(libs.plugins.kotlin.ksp) apply false
     alias(libs.plugins.kotlin.room) apply false
+    alias(libs.plugins.google.service) apply false
 }
+
+//dependencies {
+//    classpath libs.plugins.google.service
+//}
