Fetch and insert data of buildingtype building usage and city complex in buildingform to server, remove pagination in buildingform

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,12 @@ android {
         release {
             minifyEnabled true
             shrinkResources true
+            debuggable false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled false
+            shrinkResources false
         }
     }
     compileOptions {
